# timegrapher2

./: .gitignore  README.md  REQUIREMENTS.md  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AmplitudeCalculator.cpp  AmplitudeCalculator.h  AudioEngine.cpp  AudioEngine.h  BandpassFilter.cpp  BandpassFilter.h  CMakeLists.txt  EngineTypes.h  JNIBridge.cpp  NoiseFloor.cpp  NoiseFloor.h  TickDetector.cpp  TickDetector.h
app/src/main/java/com/kargathra/timegrapher/: MainActivity.kt
app/src/main/java/com/kargathra/timegrapher/audio/: AudioDeviceMonitor.kt  AudioEngineJNI.kt
app/src/main/java/com/kargathra/timegrapher/timing/: TimingViewModel.kt
app/src/main/java/com/kargathra/timegrapher/ui/components/: KargathraLogo.kt  MetricsCard.kt  OscilloscopeView.kt  PaperTapeView.kt
app/src/main/java/com/kargathra/timegrapher/ui/screens/: MainScreen.kt
app/src/main/java/com/kargathra/timegrapher/ui/theme/: Theme.kt
app/src/main/res/drawable/: ic_kargathra_logo.xml  ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
gradle/: libs.versions.toml
